Create class MRS3 and unify all methods into that

--- a/blending.ipynb
+++ b/blending.ipynb
@@ -10,28 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e1607c7d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-05-07 18:37:44.403265: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-05-07 18:37:44.600140: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-05-07 18:37:44.600180: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-05-07 18:37:44.631347: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-05-07 18:37:44.701718: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-05-07 18:37:45.364467: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend\n",
       "0.9.0\n",
       "2.15.0\n",
       "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
@@ -43,7 +29,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 12851407868879145965\n",
+      "incarnation: 1092379943008710333\n",
       "xla_global_id: -1\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
@@ -53,7 +39,7 @@
       "  links {\n",
       "  }\n",
       "}\n",
-      "incarnation: 409005341030696435\n",
+      "incarnation: 14006028887508901922\n",
       "physical_device_desc: \"device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\"\n",
       "xla_global_id: 416903419\n",
       "]\n",
@@ -185,33 +171,27 @@
       "  Install to:                    /home/primarina314/anaconda3/envs/mrs3\n",
       "-----------------------------------------------------------------\n",
       "\n",
-      "\n"
+      "\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-07 18:37:47.174805: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 23:03:16.753190: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 18:37:47.217167: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 23:03:16.753255: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 18:37:47.217204: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 23:03:16.753275: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 18:37:47.237654: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 23:03:16.753453: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 18:37:47.237718: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 23:03:16.753467: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2022] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2025-05-07 23:03:16.753487: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 18:37:47.237738: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 18:37:47.387010: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 18:37:47.387051: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 18:37:47.387057: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2022] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
-      "2025-05-07 18:37:47.387077: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
-      "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 18:37:47.387090: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 9706 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+      "2025-05-07 23:03:16.753498: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 9706 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -227,6 +207,7 @@
     "import keras\n",
     "import matplotlib.pyplot as plt\n",
     "from utils import *\n",
+    "from multipledispatch import dispatch\n",
     "\n",
     "print(keras_cv.__version__)\n",
     "print(keras.__version__)\n",
@@ -332,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "732cefc7",
    "metadata": {},
    "outputs": [],
@@ -349,23 +330,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 62,
    "id": "68af455d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "roi, _ = select_polygon_roi(img_path)\n",
+    "from utils import MRS3\n",
+    "roi, _ = MRS3.select_polygon_roi(img_path)\n",
     "mask = np.all(roi != [0, 0, 0], axis=2)\n",
     "mask_uint8 = mask.astype(np.uint8) * 255"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 64,
+   "id": "5d72ce68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imshow('test', roi)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bafd158d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "\n",
     "def point_line_distance(point, line_start, line_end):\n",
     "    \"\"\"\n",
@@ -404,7 +399,34 @@
     "    dist = np.linalg.norm(np.array([px, py]) - closest_point)\n",
     "    return dist\n",
     "\n",
-    "def distance_to_polygon_edge(mask, point):\n",
+    "def is_point_inside_polygon(point, polygon):\n",
+    "    \"\"\"\n",
+    "    점이 다각형 내부에 있는지 확인 (Ray casting algorithm)\n",
+    "    point: (x, y) 튜플\n",
+    "    polygon: 다각형 꼭짓점 좌표 배열 [(x1,y1), (x2,y2), ...]\n",
+    "    \"\"\"\n",
+    "    x, y = point\n",
+    "    n = len(polygon)\n",
+    "    inside = False\n",
+    "    \n",
+    "    p1x, p1y = polygon[0]\n",
+    "    for i in range(n + 1):\n",
+    "        p2x, p2y = polygon[i % n]\n",
+    "        if y > min(p1y, p2y):\n",
+    "            if y <= max(p1y, p2y):\n",
+    "                if x <= max(p1x, p2x):\n",
+    "                    if p1y != p2y:\n",
+    "                        xinters = (y - p1y) * (p2x - p1x) / (p2y - p1y) + p1x\n",
+    "                    if p1x == p2x or x <= xinters:\n",
+    "                        inside = not inside\n",
+    "        p1x, p1y = p2x, p2y\n",
+    "    \n",
+    "    return inside\n",
+    "\n",
+    "# class \n",
+    "\n",
+    "\n",
+    "def distance_to_polygon_edge_from_mask(mask, point):\n",
     "    \"\"\"\n",
     "    mask: 2D numpy array, 다각형 영역이 1(또는 255), 배경이 0인 바이너리 마스크\n",
     "    point: (x, y) 튜플, 기준점 좌표\n",
@@ -418,6 +440,12 @@
     "    contours, _ = cv2.findContours(mask_bin, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "    if len(contours) == 0:\n",
     "        return None  # 다각형이 없는 경우\n",
+    "    \n",
+    "    # 다각형 꼭짓점 좌표 추출\n",
+    "    polygon = contours[0].reshape(-1, 2)\n",
+    "\n",
+    "    # 점이 다각형 내부에 있는지 확인\n",
+    "    inside = is_point_inside_polygon(point, polygon)\n",
     "\n",
     "    min_dist = float('inf')\n",
     "    for contour in contours:\n",
@@ -430,7 +458,35 @@
     "            if dist < min_dist:\n",
     "                min_dist = dist\n",
     "\n",
-    "    return min_dist\n",
+    "    return min_dist if inside else -min_dist\n",
+    "\n",
+    "def distance_to_polygon_edge_from_contours(contours, point):\n",
+    "    \"\"\"\n",
+    "    point: (x, y) 튜플, 기준점 좌표\n",
+    "    contours: contours 튜플(vertices). cv2.findContours 의 0번째 컴포넌트\n",
+    "    반환값: point에서 다각형 경계까지의 최소 수직거리 (float) - 부호 고려\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if len(contours) == 0:\n",
+    "        return None  # 다각형이 없는 경우\n",
+    "    \n",
+    "    # 다각형 꼭짓점 좌표 추출\n",
+    "    polygon = contours[0].reshape(-1, 2)\n",
+    "\n",
+    "    # 점이 다각형 내부에 있는지 확인\n",
+    "    inside = is_point_inside_polygon(point, polygon)\n",
+    "\n",
+    "    min_dist = float('inf')\n",
+    "    for contour in contours:\n",
+    "        pts = contour.reshape(-1, 2)\n",
+    "        n = len(pts)\n",
+    "        for i in range(n):\n",
+    "            start = tuple(pts[i])\n",
+    "            end = tuple(pts[(i + 1) % n])\n",
+    "            dist = point_line_distance(point, start, end)\n",
+    "            if dist < min_dist:\n",
+    "                min_dist = dist\n",
+    "    return min_dist if inside else -min_dist\n",
     "\n",
     "# 사용 예시\n",
     "# mask = np.zeros((200, 200), dtype=np.uint8)\n",
@@ -444,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "4dd97249",
    "metadata": {},
    "outputs": [
@@ -452,50 +508,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "distance from (40, 51) to edge: 0.0\n",
-      "distance from (21, 172) to edge: 0.7071067811865476\n",
-      "distance from (74, 146) to edge: 36.40054944640259\n",
-      "distance from (59, 79) to edge: 33.421549934136806\n",
-      "distance from (60, 33) to edge: 2.1213203435596424\n",
-      "distance from (30, 54) to edge: 3.605551275463989\n",
-      "distance from (85, 19) to edge: 0.7071067811865476\n",
-      "distance from (59, 34) to edge: 2.0\n",
-      "distance from (43, 48) to edge: 0.7071067811865476\n",
-      "distance from (62, 40) to edge: 4.47213595499958\n",
-      "distance from (63, 38) to edge: 3.5355339059327378\n",
-      "distance from (63, 33) to edge: 0.0\n",
-      "distance from (61, 34) to edge: 0.7071067811865476\n",
-      "distance from (61, 113) to edge: 57.14017850864661\n",
-      "distance from (75, 170) to edge: 14.560219778561036\n",
-      "distance from (94, 108) to edge: 31.144823004794873\n",
-      "distance from (3, 189) to edge: 24.698178070456937\n",
-      "distance from (14, 179) to edge: 10.0\n",
-      "distance from (38, 140) to edge: 31.400636936215164\n",
-      "distance from (118, 173) to edge: 13.892443989449804\n",
-      "distance from (25, 32) to edge: 24.08318915758459\n",
-      "distance from (14, 18) to edge: 41.86884283091664\n",
-      "distance from (40, 20) to edge: 24.413111231467404\n",
-      "distance from (67, 19) to edge: 9.433981132056603\n",
-      "distance from (30, 47) to edge: 9.192388155425117\n",
-      "distance from (15, 42) to edge: 22.20360331117452\n",
-      "distance from (24, 15) to edge: 38.01315561749642\n",
-      "distance from (96, 90) to edge: 30.265491900843113\n",
-      "distance from (113, 134) to edge: 5.0990195135927845\n",
-      "distance from (114, 88) to edge: 13.0\n",
-      "distance from (125, 81) to edge: 2.0\n",
-      "distance from (64, 111) to edge: 59.09314681077663\n",
-      "distance from (77, 56) to edge: 26.248809496813376\n",
-      "distance from (78, 51) to edge: 22.80350850198276\n"
+      "distance from (73, 92) to edge: 43.04648650006177\n",
+      "distance from (40, 22) to edge: -33.54101966249684\n",
+      "distance from (64, 49) to edge: 1.0\n",
+      "distance from (42, 51) to edge: -7.211102550927978\n",
+      "distance from (42, 55) to edge: -3.605551275463989\n",
+      "distance from (42, 57) to edge: -2.0\n",
+      "distance from (39, 65) to edge: 3.605551275463989\n",
+      "distance from (34, 64) to edge: 0.7071067811865476\n",
+      "distance from (69, 107) to edge: 54.56189146281496\n",
+      "distance from (3, 29) to edge: -44.721359549995796\n",
+      "distance from (85, 124) to edge: 38.01315561749642\n",
+      "distance from (29, 31) to edge: -30.870698080866262\n",
+      "distance from (79, 110) to edge: 47.853944456021594\n",
+      "distance from (72, 90) to edge: 40.8166632639171\n",
+      "distance from (90, 77) to edge: 34.713109915419565\n"
      ]
     }
    ],
    "source": [
     "# dist = distance_to_polygon_edge(mask, (100, 100))\n",
     "# print(dist)\n",
+    "mask_bin = (mask > 0).astype(np.uint8) * 255\n",
+    "\n",
+    "contours, _ = cv2.findContours(mask_bin, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
     "def check_dist(event, x, y, flags, param):\n",
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
-    "        dist = distance_to_polygon_edge(mask, (x, y))\n",
+    "        # dist = distance_to_polygon_edge_from_mask(mask, (x, y))\n",
+    "        dist = distance_to_polygon_edge_from_contours(contours, (x, y))\n",
     "        print(f\"distance from ({x}, {y}) to edge: {dist}\")\n",
     "\n",
     "cv2.namedWindow(\"test\")\n",
@@ -510,42 +551,6 @@
     "        break\n",
     "\n",
     "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "df3cb828",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.imshow('test', mask)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "9a52bebb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " ...\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mask)"
    ]
   },
   {
@@ -567,9 +572,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "mrs3_compress(img_path, output_path, 4, ROI_mode.Polygon)\n"
    ]
   },
@@ -629,18 +631,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "f4096a74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: 경계 interpolation 한계 설정"
+    "# TODO: 경계 interpolation 한계 설정\n",
+    "# 거리에 따라 자연스럽게\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "020c0014",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class blending_interpolation_mode(Enum):\n",
+    "    LINEAR = 0\n",
+    "    HERMIT_3 = 1\n",
+    "    HERMIT_5 = 2\n",
+    "    SINUSOIDAL = 3\n",
+    "    EXPONENTIAL = 4\n",
+    "    SINH = 5\n",
+    "\n",
+    "# replace s = (x - a) / (b - a)\n",
+    "# f(x) = (x - a) / (b - a)\n",
+    "# f(x) = 3x² - 2x³\n",
+    "# f(x) = 6x⁵ - 15x⁴ + 10x³\n",
+    "# f(x) = (1 - cos(πx)) / 2\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_alpha():\n",
+    "\n",
+    "    return\n",
+    "\n",
+    "def blending_with_interpolation():\n",
+    "\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "2e969ca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, first_name, last_name, age):\n",
+    "        self.first_name = first_name\n",
+    "        self.last_name = last_name\n",
+    "        self.__age = age  # 내부 변수로 저장\n",
+    "        \n",
+    "    @property\n",
+    "    def age(self):\n",
+    "        return self.__age\n",
+    "    \n",
+    "    @age.setter\n",
+    "    def age(self, newage):\n",
+    "        self.__age = newage\n",
+    "\n",
+    "\n",
+    "p = Person(\"qwer\", \"asdf\", 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "b3972842",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p.age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "0b3e403d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type('asdf'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50a2d697",
    "metadata": {},
    "outputs": [],
    "source": []
