--- a/main.ipynb
+++ b/main.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "51b8786c",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,10 @@
     "from PIL import Image\n",
     "from utils import *\n",
     "\n",
-    "print(cv2.__version__)"
+    "print(cv2.__version__)\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -1102,7 +1105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
