create mrs3.py and go on multiple targets handling

--- a/blending.ipynb
+++ b/blending.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "e1607c7d",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 1092379943008710333\n",
+      "incarnation: 11224742498720556007\n",
       "xla_global_id: -1\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
@@ -39,7 +39,7 @@
       "  links {\n",
       "  }\n",
       "}\n",
-      "incarnation: 14006028887508901922\n",
+      "incarnation: 5321042600615940873\n",
       "physical_device_desc: \"device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\"\n",
       "xla_global_id: 416903419\n",
       "]\n",
@@ -180,18 +180,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-07 23:03:16.753190: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-09 01:20:50.722870: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 23:03:16.753255: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-09 01:20:50.723071: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 23:03:16.753275: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-09 01:20:50.723099: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 23:03:16.753453: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-09 01:20:50.723509: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 23:03:16.753467: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2022] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
-      "2025-05-07 23:03:16.753487: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-09 01:20:50.723583: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2022] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2025-05-09 01:20:50.723662: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-07 23:03:16.753498: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 9706 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+      "2025-05-09 01:20:50.723689: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 9706 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
     "import keras_cv\n",
     "import keras\n",
     "import matplotlib.pyplot as plt\n",
-    "from utils import *\n",
+    "# from utils import *\n",
     "from multipledispatch import dispatch\n",
     "\n",
     "print(keras_cv.__version__)\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "732cefc7",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "id": "68af455d",
    "metadata": {},
    "outputs": [],
@@ -343,12 +343,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 67,
+   "id": "76e1e08f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imwrite('bin-img.png', mask_uint8, [cv2.IMWRITE_PNG_COMPRESSION, 9, cv2.IMWRITE_PNG_BILEVEL, 1])\n",
+    "cv2.imwrite('bin-img.jpeg', mask_uint8)\n",
+    "cv2.imwrite('roi-test.png', roi, [cv2.IMWRITE_PNG_COMPRESSION, 9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "7954099d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "758\n",
+      "125725\n",
+      "473831\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.path.getsize('bin-img.png'))\n",
+    "print(os.path.getsize('roi-test.png'))\n",
+    "\n",
+    "print(os.path.getsize('Lenna_(test_image).png'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "5d72ce68",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv2.imshow('test', roi)\n",
+    "cv2.imshow('test', mask_uint8)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
@@ -735,8 +781,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "50a2d697",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import utils as ut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bda99828",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asdfasdfasdfasd\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mrs3 as mr\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e7c5db4",
    "metadata": {},
    "outputs": [],
    "source": []
